Fixed the gap

--- a/styles/modules/navbar.module.css
+++ b/styles/modules/navbar.module.css
@@ -126,7 +126,7 @@
   font-size: 1rem;
   font-weight: 400;
   cursor: pointer;
-  padding: 8px 4px;
+  padding: 16px 8px;
   text-align: center;
   transform: scale(0);
   transform-origin: top center;
